Clean test warnings from OpenRewrite (#16)