@@ -16,13 +16,13 @@
  */
 package org.apache.camel.upgrade;
 
-import java.io.File;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.openrewrite.InMemoryExecutionContext;
 import org.openrewrite.Parser;
@@ -33,8 +33,9 @@ import org.slf4j.LoggerFactory;
 
 public class CamelTestUtil {
     private static final Logger LOGGER = LoggerFactory.getLogger(CamelTestUtil.class);
+
     /**
-     * Enumeration of Camel version, with precise versions of dependencies and the name of the recipe
+     * Enumeration of the Camel version, with precise versions of dependencies and the name of the recipe
      */
     public enum CamelVersion {
         v3_18(3, 18, 6),
@@ -74,42 +75,44 @@ public class CamelTestUtil {
     }
 
     private static RecipeSpec recipe(RecipeSpec spec, CamelVersion to) {
-        return spec.recipeFromResource(to.getRecipe());
+        return recipe(spec, to, to.getRecipe());
     }
 
-    public static RecipeSpec recipe(RecipeSpec spec, CamelVersion to, String... activerecipes) {
-        if (activerecipes == null || activerecipes.length == 0) {
+    public static RecipeSpec recipe(RecipeSpec spec, CamelVersion to, String... activeRecipes) {
+        if (activeRecipes == null || activeRecipes.length == 0) {
             return spec.recipeFromResource(to.getYamlFile(), to.getRecipe());
         }
-        return spec.recipeFromResource(to.getYamlFile(), activerecipes);
+        return spec.recipeFromResource(to.getYamlFile(), activeRecipes);
     }
 
     public static Parser.Builder parserFromClasspath(CamelVersion from, String... classpath) {
         List<String> resources = Arrays.stream(classpath).map(cl -> {
-            if (cl.startsWith("camel-")) {
-                String maxVersion = cl + "-" +  from.getVersion();
-                //find the highest version lesser or equals the required one
-                Optional<String> dependency = Arrays.stream(Paths.get("target/test-classes/META-INF/rewrite/classpath").toFile().listFiles())
-                        .filter(f -> f.getName().startsWith(cl))
-                        .map(f -> f.getName().substring(0, f.getName().lastIndexOf(".")))
-                        //filter out or higher version the requested
-                        .filter(f -> f.compareTo(maxVersion) <= 0)
-                        .sorted(Comparator.reverseOrder())
-                        .findFirst();
+                    if (cl.startsWith("camel-")) {
+                        String maxVersion = cl + "-" + from.getVersion();
+                        //find the highest version lesser or equals the required one
+                        Path path = Paths.get("target", "test-classes", "META-INF", "rewrite", "classpath");
+                        Optional<String> dependency = Arrays.stream(path.toFile().listFiles())
+                                .filter(f -> f.getName().startsWith(cl))
+                                .map(f -> f.getName().substring(0, f.getName().lastIndexOf(".")))
+                                //filter out or higher version the requested
+                                .filter(f -> f.compareTo(maxVersion) <= 0)
+                                .sorted(Comparator.reverseOrder())
+                                .findFirst();
 
-                if(dependency.isEmpty()) {
-                    LOGGER.warn("Dependency not found in classpath: {}", cl);
-                }
+                        if (dependency.isEmpty()) {
+                            LOGGER.warn("Dependency not found in classpath: {}", cl);
+                        }
 
-                return dependency.orElse(null);
-            }
-            return cl;
-        })
-                .filter(cl -> cl != null)
-                .collect(Collectors.toList());
+                        return dependency.orElse(null);
+                    }
+                    return cl;
+                })
+                .filter(Objects::nonNull)
+                .toList();
 
-        return JavaParser.fromJavaVersion().logCompilationWarningsAndErrors(true)
-                    .classpathFromResources(new InMemoryExecutionContext(), resources.toArray(new String[resources.size()]));
+        return JavaParser.fromJavaVersion()
+                .logCompilationWarningsAndErrors(true)
+                .classpathFromResources(new InMemoryExecutionContext(), resources.toArray(new String[0]));
     }
 
 }
